Fix android sqlite and add websocket messaging